# ParallelProgrammingProject

./: .gitignore  CMakeLists.txt  README.md  build.sh  convert_table.py
data/: test.mat
include/: matrix_utils.h  ryser_algorithms.h  ryser_cuda.h
src/: CMakeLists.txt  cuda_kernels.cu  main.cpp  matrix_utils.cpp  ryser_algorithms.cpp
tests/: CMakeLists.txt  ryser_tests.cpp
